<resources>
    <string name="app_name">Online Coffee Shop App</string>
    <string name="get_started">Get Started</string>
    <string name="started">Started</string>
    <string name="find_the_best_coffe_nfor_you">Find the best coffe\nfor you</string>
    <string name="setting">Setting</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_anything">Search anything...</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="_20_00">$20.00</string>
    <string name="extra_text">extra text</string>
    <string name="payment">Payment</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="_24_0">$24.0</string>
    <string name="desc">desc</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="todo">TODO</string>
    <string name="my_cart">My Cart</string>
    <string name="enter_your_discount_code">Enter Your Discount Code</string>
    <string name="apply">Apply</string>
    <string name="subtotal">Subtotal</string>
    <string name="_24_00">$24.00</string>
    <string name="_0_00">$0</string>
    <string name="free_delivery">Fee Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="dollar_sign">$</string>
</resources>