<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient"
    tools:context=".view.CartActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back2"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/my_cart"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewOrderItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/et_DiscountCode"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:ems="10"
                android:paddingStart="16dp"
                android:hint="@string/enter_your_discount_code"
                android:backgroundTint="@color/white"
                android:background="@drawable/edittext_bg"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewOrderItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlSymmetry" />

            <Button
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/orange"
                android:text="@string/apply"
                app:layout_constraintBottom_toBottomOf="@id/et_DiscountCode"
                app:layout_constraintEnd_toEndOf="@id/et_DiscountCode"
                app:layout_constraintTop_toTopOf="@id/et_DiscountCode"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tv_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@id/et_DiscountCode"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_subtotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@id/tv_subtotal"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_feeDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_delivery"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_subtotal"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_deliveryPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@id/tv_feeDelivery"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_totalTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_tax"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_feeDelivery"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_totalTaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@id/tv_totalTax"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_totalTax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@id/tv_total"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_proceed_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/proceed_to_checkout"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>