<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="175dp"
    android:layout_margin="8dp">

    <View
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:background="@drawable/white_bg"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_itemImage"
        android:layout_width="104dp"
        android:layout_height="76dp"
        android:scaleType="centerCrop"
        android:elevation="4dp"
        android:src="@drawable/coffee_bean"
        app:shapeAppearance="@style/CircleImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_itemImage">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:numStars="5"
            android:progressTint="@color/yellow"
            android:rating="4.5"
            android:progress="5"
            style="?android:attr/ratingBarStyleSmall"/>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_extraText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_text"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_00"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>